--- a/src/notebooks/analyze.ipynb
+++ b/src/notebooks/analyze.ipynb
@@ -7,11 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rsp.constants import RESULTS_DIR, AU_SUBSET, FIGURES_DIR\n",
+    "from rsp.constants import RESULTS_DIR, AU_SUBSET, FIGURES_DIR, SUPPORTED_AUS\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "AU_EDITING_DIR = RESULTS_DIR / \"au_editing\"\n"
    ]
@@ -25,7 +26,7 @@
    "source": [
     "no_edit_df = pd.read_csv(AU_EDITING_DIR / \"original_au_predictions.csv\")\n",
     "# drop rows where any AU is -1\n",
-    "no_edit_df = no_edit_df[(no_edit_df[AU_SUBSET] != -1.0).all(axis=1)]\n",
+    "no_edit_df = no_edit_df[(no_edit_df[SUPPORTED_AUS] != -1.0).all(axis=1)]\n",
     "\n",
     "sns.set_style(\"ticks\")\n",
     "au_folders = [\n",
@@ -40,8 +41,10 @@
     "    if path.is_dir() and not path.name.startswith(\".\")\n",
     "]\n",
     "def plot_au_distribution(df, au_name, title, fname, scale):\n",
+    "\n",
+    "    \n",
     "    # compare AU from filename with no_edit_df\n",
-    "    fig, ax = plt.subplots(figsize=(10, 6), nrows=1)\n",
+    "    fig, ax = plt.subplots(figsize=(20, 12), nrows=1)\n",
     "    \n",
     "    common_kwargs = {\"x\": au_name, \"ax\": ax, \"stat\": \"percent\", }\n",
     "    # calc actual bins\n",
@@ -57,10 +60,13 @@
     "        ax.set_ylim(0,100)\n",
     "    else:\n",
     "        ax.set_ylim(0,20)\n",
-    "    ax.set_title(title)\n",
-    "    ax.set_xlabel(\"AU Score\")\n",
-    "    ax.set_ylabel(\"Percentage (%)\")\n",
-    "    ax.legend([\"Not Edited\", f\"Edited (Scale={scale})\"])\n",
+    "    # ax.set_title(title)\n",
+    "    ax.set_xlabel(\"AU Score\", fontsize=30)\n",
+    "    ax.set_ylabel(\"Percentage (%)\", fontsize=30)\n",
+    "    ax.legend([\"Not Edited\", f\"Edited (Scale={scale})\"], fontsize=30)\n",
+    "    \n",
+    "    # set tickparams\n",
+    "    ax.tick_params(axis='both', which='major', labelsize=30)\n",
     "    plt.tight_layout()\n",
     "    plt.savefig(FIGURES_DIR / fname, bbox_inches=\"tight\")\n",
     "    plt.show()\n",
@@ -69,14 +75,15 @@
     "def plot_mode_distributions(mode):\n",
     "    for au in au_folders:\n",
     "        for result in au.glob(f\"{mode}/*.csv\"):\n",
-    "            if au.name not in AU_SUBSET:\n",
+    "            if au.name not in SUPPORTED_AUS:\n",
     "                continue\n",
     "            scale = result.stem.split(\"_\")[-1].removeprefix(\"scale\")\n",
     "            if scale != \"1.0\":\n",
     "                continue\n",
     "            df = pd.read_csv(result)\n",
+    "            df = df[(df[SUPPORTED_AUS] != -1.0).all(axis=1)]\n",
     "            title = f\"Distribution of AU Scores for {au.name} - Mode: {mode.capitalize()}\"\n",
-    "            fname = f\"au_{au.name}_edited_mode_{mode}_scale_{scale}_distribution.pdf\"\n",
+    "            fname = f\"{au.name}.pdf\"\n",
     "            bins_edit, bins_no_edit = plot_au_distribution(df, au.name, title, fname, scale)\n",
     "            print(f\"Plotted {fname} with bins_edit: {bins_edit} and bins_no_edit: {bins_no_edit}\")\n",
     "            # mean and std\n",
@@ -103,6 +110,26 @@
    "source": [
     "plot_mode_distributions(\"disentangled\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in availible action units, plot barplot of original au predictions\n",
+    "for i in SUPPORTED_AUS:\n",
+    "    plot_mode_distributions(\"intensive\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -121,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
